Feat:branch delete

--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
-        ]
+        ],
+        "format": "pint"
     },
     "extra": {
         "laravel": {
