--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "php": "^8.2",
         "firebase/php-jwt": "^6.11",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.30"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
